--- a/Dag1-begreperFilosofi/1-Begreper.ipynb
+++ b/Dag1-begreperFilosofi/1-Begreper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c97e2a88",
+   "id": "5b2ab30d",
    "metadata": {},
    "source": [
     "### Begreper fra SAS-verden\n",
@@ -16,21 +16,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6702b9c4",
+   "id": "eeefdc54",
    "metadata": {},
    "source": [
     "### Begreper fra \"objekt-orientert\"-python-verden\n",
     "\n",
     "Grunnleggende komponenter\n",
     "- Variable\n",
-    "- Object\n",
-    "- Class (\"everything is a class\")"
+    "- Object (\"everything is an object\")\n",
+    "- Class"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e54bccfd",
+   "id": "7edb1e4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6fb391a0",
+   "id": "98e07cb2",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6415493f",
+   "id": "ce095284",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffc4300b",
+   "id": "51cb1926",
    "metadata": {},
    "source": [
     "#### En variabel med navn \"x\" av classen \"int\" er registrert som ett objekt med verdien \"6\"."
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "19034d0e",
+   "id": "5e1308ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06b2fcf3",
+   "id": "a03766c6",
    "metadata": {},
    "source": [
     "#### Variabelen \"y\" av classen \"string\" peker mot ett objekt som inneholder \"Ola\"."
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a5c9819",
+   "id": "5a41b1f4",
    "metadata": {},
    "source": [
     "### Logikk\n",
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "187a4199",
+   "id": "8e44c4d6",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f33358c7",
+   "id": "c58768ba",
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "9feb4ea4",
+   "id": "f4ccbe11",
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "2307494f",
+   "id": "64465a90",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "8b491b55",
+   "id": "d89ed1c9",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "ad20f351",
+   "id": "c0141982",
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "b8359989",
+   "id": "a9ad733a",
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d2b461e",
+   "id": "471aad1f",
    "metadata": {},
    "source": [
     "### Loops / tab inn\n",
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "2236b133",
+   "id": "750ba9a7",
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "8505859d",
+   "id": "a2e5d51f",
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b88af3f",
+   "id": "736bb79c",
    "metadata": {},
    "source": [
     "# Innhold\n",
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "0b9c6176",
+   "id": "dffd56d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61aa588e",
+   "id": "3ebc1e28",
    "metadata": {},
    "source": [
     "### \"iterables\"\n",
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "a2b03cc8",
+   "id": "e831e614",
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "f93ba810",
+   "id": "63952910",
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "693e68e7",
+   "id": "a82124b4",
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "cec66bf1",
+   "id": "74eec56f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "d68df2fb",
+   "id": "3b8f5ec6",
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "99da7bac",
+   "id": "2906ace0",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7272619b",
+   "id": "f305a6c6",
    "metadata": {},
    "source": [
     "### Dataframe (fra pandas)\n",
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "16f0db6a",
+   "id": "383c5938",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "2978e156",
+   "id": "8ca2d606",
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "ddbd7a99",
+   "id": "d2ba91de",
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "8ea39139",
+   "id": "df6e3833",
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9efb49d5",
+   "id": "00c32e65",
    "metadata": {},
    "source": [
     "### Operasjoner\n",
@@ -657,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "0086f3a7",
+   "id": "ba4d9ed1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "efbe8c1e",
+   "id": "53fed188",
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "afd527c2",
+   "id": "1bddbcdd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "902fe501",
+   "id": "d3fbfad7",
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "2654dde9",
+   "id": "029b291b",
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "ec62e9a0",
+   "id": "95b3a0fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "cae96a30",
+   "id": "ff68f992",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -768,7 +768,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "1ae5a7ba",
+   "id": "986b9a5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,7 +778,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "bc446de3",
+   "id": "0043163a",
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "146904cf",
+   "id": "cfeb8d0b",
    "metadata": {},
    "source": [
     "### Filosofi"
@@ -807,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32e510c9",
+   "id": "6873107f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0710a5ad",
+   "id": "d1864d93",
    "metadata": {},
    "source": [
     "#### \"PEP\"-er\n",
@@ -826,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecbcf6dc",
+   "id": "1c6ae776",
    "metadata": {},
    "outputs": [],
    "source": []
