major changes bro

--- a/Dag1-begreperFilosofi/1-Begreper.ipynb
+++ b/Dag1-begreperFilosofi/1-Begreper.ipynb
@@ -2,21 +2,26 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5b2ab30d",
+   "id": "cfddc0b3",
    "metadata": {},
    "source": [
     "### Begreper fra SAS-verden\n",
-    "(Vanskelig å google)\n",
+    "(Vanskelig å google)\\\n",
+    "Hvilke analoger har vi?\n",
     "- \"Kode\"\n",
     "- \"Variabel\"\n",
+    "- \"PROC\" = Procedure = Function ?\n",
+    "- \"Macrovariabel\"\n",
+    "- \"Macroer\"\n",
     "- \"Koble\"\n",
     "- \"Omkoding\"\n",
-    "- \"Grupperingsvariabel\""
+    "- \"Grupperingsvariabel\" - \"Formater\"\n",
+    "- \"Datatyper\": Bare \"karakter\" og \"numerisk\"?"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "eeefdc54",
+   "id": "674fd536",
    "metadata": {},
    "source": [
     "### Begreper fra \"objekt-orientert\"-python-verden\n",
@@ -28,9 +33,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a733a5ee",
+   "metadata": {},
+   "source": [
+    "### En variabel med navn \"x\" av classen \"int\" er registrert som ett objekt med verdien \"6\"."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7edb1e4b",
+   "id": "c4b77a62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "98e07cb2",
+   "id": "ce0c7f6d",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ce095284",
+   "id": "f6964ffd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,16 +83,74 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51cb1926",
+   "id": "394665f8",
    "metadata": {},
    "source": [
-    "#### En variabel med navn \"x\" av classen \"int\" er registrert som ett objekt med verdien \"6\"."
+    "##### Vi overskriver variabelen \"x\" med ett objekt av classen \"float\" med verdi \"7.0\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "5e1308ae",
+   "execution_count": 3,
+   "id": "97a2b3c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 7.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d5d640d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "421a2d1e",
+   "metadata": {},
+   "source": [
+    "##### Variabelen er den samme, men har et annet objekt tilknyttet seg.\n",
+    "Det nye objektet/\"instansen\", er av classen/\"objekttypen\": float"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "79cd359f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#help(float)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7103ec64",
+   "metadata": {},
+   "source": [
+    "### Variabelen \"y\" av classen \"string\" peker mot ett objekt som inneholder \"Ola\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "44f8e180",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,15 +160,36 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a03766c6",
+   "id": "eacd4f8d",
    "metadata": {},
    "source": [
-    "#### Variabelen \"y\" av classen \"string\" peker mot ett objekt som inneholder \"Ola\"."
+    "### Bonus: F-strings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "2b0af451",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Ola er 23 år.'"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f\"{y} er {int(16 + x)} år.\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5a41b1f4",
+   "id": "d23ee2cf",
    "metadata": {},
    "source": [
     "### Logikk\n",
@@ -113,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8e44c4d6",
+   "id": "adae5ba4",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c58768ba",
+   "id": "9e7e0458",
    "metadata": {},
    "outputs": [
     {
@@ -156,8 +248,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "f4ccbe11",
+   "execution_count": 110,
+   "id": "2719c508",
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +258,7 @@
        "True"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,13 +266,14 @@
    "source": [
     "b = []\n",
     "c = b.copy()\n",
+    "\n",
     "c == b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "64465a90",
+   "execution_count": 111,
+   "id": "a7a2656e",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +282,7 @@
        "False"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "d89ed1c9",
+   "id": "e6df2bbc",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "c0141982",
+   "id": "c53c4481",
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "a9ad733a",
+   "id": "be4bd84d",
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "471aad1f",
+   "id": "c42636f6",
    "metadata": {},
    "source": [
     "### Loops / tab inn\n",
@@ -277,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "750ba9a7",
+   "id": "008ae04a",
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "a2e5d51f",
+   "id": "ef945158",
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "736bb79c",
+   "id": "b29304a4",
    "metadata": {},
    "source": [
     "# Innhold\n",
@@ -341,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "dffd56d1",
+   "id": "51a72959",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ebc1e28",
+   "id": "b7c9098b",
    "metadata": {},
    "source": [
     "### \"iterables\"\n",
@@ -367,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "e831e614",
+   "id": "b77399c9",
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "63952910",
+   "id": "89aafd9a",
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "a82124b4",
+   "id": "10c8cec4",
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "74eec56f",
+   "id": "4c271a75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "3b8f5ec6",
+   "id": "e0024008",
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "2906ace0",
+   "id": "d9abe8fa",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +586,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f305a6c6",
+   "id": "821a279e",
    "metadata": {},
    "source": [
     "### Dataframe (fra pandas)\n",
@@ -503,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "383c5938",
+   "id": "3bb1230f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "8ca2d606",
+   "id": "676d1a37",
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "d2ba91de",
+   "id": "ccde813f",
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "df6e3833",
+   "id": "a13c270b",
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +735,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00c32e65",
+   "id": "705a39a7",
    "metadata": {},
    "source": [
     "### Operasjoner\n",
@@ -657,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "ba4d9ed1",
+   "id": "4d1f2080",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "53fed188",
+   "id": "c9fc884c",
    "metadata": {},
    "outputs": [
     {
@@ -688,21 +781,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "id": "1bddbcdd",
+   "execution_count": 51,
+   "id": "ea807b36",
    "metadata": {},
    "outputs": [],
    "source": [
     "class textbehandling():\n",
+    "    # Dette er en \"docstring\" som tilhører classen som helhet\n",
+    "    \"\"\"Her lager vi vår egen class\"\"\"\n",
+    "    # Variabler som tilhører classes kalles gjerne \"attributes\" eller \"class variables\"\n",
+    "    default_name = \"Ola\"\n",
+    "   \n",
     "    # En \"method\" er bare en funksjon som ligger under en class\n",
-    "    def U(u):\n",
+    "    # Denne har parameteret sitt satt til en default som er definert inne i classen.\n",
+    "    def U(u = default_name):\n",
+    "        # Dette er en \"docstring\" som tilhører metoden\n",
+    "        \"\"\" Vi stjeler bare funksjonen 'upper' fra classen 'string' \"\"\"\n",
     "        return u.upper()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "id": "d3fbfad7",
+   "execution_count": 40,
+   "id": "2616a9c2",
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +812,7 @@
        "'CARL'"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,41 +823,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "id": "029b291b",
+   "execution_count": 41,
+   "id": "0b2ebda8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'OLA'"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "textbehandling.U()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "c9b31df4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Ola'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "textbehandling.default_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "6273907f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on function U in module __main__:\n",
+      "Help on class textbehandling in module __main__:\n",
       "\n",
-      "U(u)\n",
-      "    # En \"method\" er bare en funksjon som ligger under en class\n",
+      "class textbehandling(builtins.object)\n",
+      " |  Her lager vi vår egen class\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  U(u='Ola')\n",
+      " |      Vi stjeler bare funksjonen 'upper' fra classen 'string'\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors defined here:\n",
+      " |  \n",
+      " |  __dict__\n",
+      " |      dictionary for instance variables (if defined)\n",
+      " |  \n",
+      " |  __weakref__\n",
+      " |      list of weak references to the object (if defined)\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data and other attributes defined here:\n",
+      " |  \n",
+      " |  default_name = 'Ola'\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "help(textbehandling.U)"
+    "#help(textbehandling.U)\n",
+    "help(textbehandling)\n",
+    "# Her dukker \"docstringene\" opp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "id": "95b3a0fa",
+   "execution_count": 47,
+   "id": "95d26e00",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Alle innstallerte lister\n",
-    "#pip list"
+    "#!pip list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "id": "ff68f992",
+   "execution_count": 48,
+   "id": "6c67f382",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,8 +931,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "id": "986b9a5e",
+   "execution_count": 49,
+   "id": "578ffd5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,8 +941,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "id": "0043163a",
+   "execution_count": 50,
+   "id": "686f6443",
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +951,7 @@
        "87"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -798,7 +962,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfeb8d0b",
+   "id": "1311c53e",
    "metadata": {},
    "source": [
     "### Filosofi"
@@ -807,7 +971,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6873107f",
+   "id": "6dbb78e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -816,7 +980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1864d93",
+   "id": "22dc2766",
    "metadata": {},
    "source": [
     "#### \"PEP\"-er\n",
@@ -826,7 +990,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c6ae776",
+   "id": "3dcb8ec9",
    "metadata": {},
    "outputs": [],
    "source": []
