--- a/Dag1-begreperFilosofi/6-Diskusjon.ipynb
+++ b/Dag1-begreperFilosofi/6-Diskusjon.ipynb
@@ -2,34 +2,37 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "88a79e28",
+   "id": "b2423654",
    "metadata": {},
    "source": [
-    "### Crosstab"
+    "### Hva ønsker dere å se gjort i Python?\n",
+    "\n",
+    "- Microeditering / Excel?\n",
+    "- API Klass og Statbank"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c0a07752",
+   "id": "ada45867",
    "metadata": {},
    "source": [
-    "https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.crosstab.html"
+    "### Hvilke typer prosjekt og data skal dere jobbe på?\n",
+    "Hvor likt / forskjellig er det fra gruppe til gruppe, seksjon til seksjon?\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "cbe976d5",
+   "id": "c53d5b3f",
    "metadata": {},
    "source": [
-    "### Oppstart av Carl på en \"PROC FREQ\"-analog\n",
-    "https://statisticsnorway.github.io/ssb_fellesfunksjoner_360/proc.html \\\n",
-    "https://github.com/statisticsnorway/ssb_fellesfunksjoner_360/blob/Merge-nbdev-template/04_proc.ipynb"
+    "### Bruker vi samme begreper om de samme prosessene?\n",
+    "Hva gikk vi gjennom nå som bør plukkes opp igjen?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b345edb0",
+   "id": "b082320e",
    "metadata": {},
    "outputs": [],
    "source": []
